# ai-customer-ticket-manager

./: .gitignore  .pre-commit-config.yaml  CHEATSHEET.md  LICENSE  Makefile  README.md  env.dist  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage.yml  pr_body_validation.yml
docs/: ARCHITECTURE.md
src/pyticket/configurator/settings/: __init__.py  base.py
src/pyticket/domain/tickets/: __init__.py  entities.py  exceptions.py  services.py
src/pyticket/entrypoints/web/: asgi.py  manage.py  urls.py  wsgi.py
src/pyticket/entrypoints/web/api/: __init__.py  dependencies.py  exceptions.py  router.py
src/pyticket/entrypoints/web/api/auth/: endpoints.py  schemas.py
src/pyticket/entrypoints/web/api/tickets/: __init__.py  router.py  schemas.py
src/pyticket/infrastructure/ai/: __init__.py  factory.py  interfaces.py
src/pyticket/infrastructure/ai/providers/: anthropic_provider.py  openai_provider.py
src/pyticket/infrastructure/models/: __init__.py  models.py
src/pyticket/infrastructure/models/migrations/: 0001_initial.py
src/pyticket/infrastructure/repositories/: django_ticket_repository.py  interfaces.py
src/pyticket/service/tickets/: __init__.py  classification_service.py  dtos.py  ticket_service.py
src/pyticket/utils/: logging.py
tests/: conftest.py
tests/domain/: test_entities.py  test_services.py
tests/infrastructure/: test_repository.py
tests/integration/: test_api.py
tests/service/: test_classification_service.py  test_ticket_service.py
